[package]
name = "apple-signin"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Peter Todorov <me@peterprototypes.com>"]
description = "Decodes and validates identity tokens generated via Sign in with Apple"
repository = "https://github.com/peterprototypes/apple-signin"
documentation = "https://docs.rs/apple-signin"
readme = "README.md"
keywords = ["apple", "signin", "jwt"]
categories = ["api-bindings"]

[features]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
jsonwebtoken = { version = "10.2", default-features = false, features = [
    "rust_crypto",
] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
